<resources>
    <string name="app_name">Basic Weather App</string>
    <string name="current_date">2022–03–22</string>
    <string name="location">Johannesburg</string>
    <string name="partly_cloudy">partly cloudy</string>
    <string name="temperature_value">22</string>
    <string name="temperature_celsius">Temperature (\u2103)</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="rain_probability">Rain probability (%)</string>
    <string name="humidity">Humidity (%)</string>
    <string name="sunrise_time_example">06:35 AM</string>
    <string name="sunset_time_example">07:45 PM</string>
    <string name="rain_probability_example">80%</string>
    <string name="humidity_example">49%</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="country">Country :</string>
    <string name="region">Region :</string>
    <string name="name">Name :</string>
    <string name="search_location_example">City name 1, City name 2</string>
    <string name="days">days :</string>
    <string name="forecast">Forecast (3 days only)</string>
    <string name="current">Current weather</string>
    <string name="search_places">search places</string>
    <string name="nearby_places">Nearby places (1 or 2 cities)</string>
    <string name="hint_sample">3</string>
    <string name="header_text">Nearby places found at %1$s and %2$s </string>
    <string name="header_text_2">Nearby places found at %1$s</string>
    <string name="current_forecast">Current and Forecast</string>
    <string name="weatherapi_com">By WeatherAPI.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="location_search">Location Search</string>
    <string name="location_selection">Please go to settings and enter or select your location</string>
    <string name="_3_day_weather_forecast">3-Day Weather Forecast</string>
    <string name="hourly_weather_forecast">Hourly Weather Forecast</string>
    <string name="select_your_weather_location">Select your weather location</string>
    <string name="temperature_c">Temperature (°C)</string>
    <string name="humidity_a">Humidity (%)</string>
    <string name="pressure_hpa">Pressure (hPa)</string>
    <string name="altitude_m">Altitude (m)</string>
    <string name="sensor_readings_message">* sensor readings get updated every 10 minutes</string>
    <string name="trends">Trends</string>
    <string name="time_period">Time Period</string>
    <string name="clear">Clear</string>
    <string name="plot">Plot</string>

    <string-array name="periods">
        <item>30 min</item>
        <item>60 min</item>
        <item>90 min</item>
        <item>120 min</item>
        <item>150 min</item>
        <item>180 min</item>
        <item>210 min</item>
        <item>240 min</item>
        <item>270 min</item>
        <item>300 min</item>
    </string-array>
</resources>