<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:background="@color/cardview_dark_background"
    tools:context=".activities.MainActivity">

   <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background">

       <ProgressBar
           android:id="@+id/progressBar_circular"
           android:layout_width="50dp"
           android:layout_height="50dp"
           android:padding="5dp"
           android:visibility="invisible"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.529"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/weatherViewPager" />

       <TextView
           android:id="@+id/weatherAPILink"
           android:layout_width="120dp"
           android:layout_height="40dp"
           android:autoLink="web"
           android:autoSizeMaxTextSize="20sp"
           android:autoSizeMinTextSize="10sp"
           android:autoSizeStepGranularity="1sp"
           android:autoSizeTextType="uniform"
           android:text="@string/weatherapi_com"
           app:layout_constraintBottom_toTopOf="@+id/weatherViewPager"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.068"
           app:layout_constraintStart_toStartOf="parent"
           tools:targetApi="o" />

       <androidx.cardview.widget.CardView
           android:id="@+id/current_forecast_cardView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:layout_marginTop="25dp"
           app:cardBackgroundColor="@color/rustic_orange"
           app:cardCornerRadius="8dp"
           app:cardElevation="0dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:id="@+id/current_forecast_textView"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="start"
                   android:padding="10dp"
                   android:text="@string/current_forecast"
                   android:textColor="@color/black"
                   android:textSize="25sp"
                   android:textAppearance="?attr/textAppearanceHeadline1"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />
           </androidx.constraintlayout.widget.ConstraintLayout>
       </androidx.cardview.widget.CardView>

       <androidx.viewpager2.widget.ViewPager2
           android:id="@+id/weatherViewPager"
           android:layout_width="match_parent"
           android:layout_height="440dp"
           android:layout_marginTop="40dp"
           android:background="@color/light_grey"
           android:orientation="horizontal"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/current_forecast_cardView">

       </androidx.viewpager2.widget.ViewPager2>

       <androidx.cardview.widget.CardView
           android:id="@+id/radiobutton_cardView"
           android:layout_width="250dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="45dp"
           app:cardCornerRadius="8dp"
           app:cardElevation="0dp"
           app:cardBackgroundColor="@color/rustic_orange"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/weatherViewPager">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:id="@+id/radiobutton_constraintLayout"
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <RadioGroup
                   android:id="@+id/radioGroup"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textAlignment="center"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toStartOf="@+id/days_textView"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent">

                   <RadioButton
                       android:id="@+id/current_radiobutton"
                       android:layout_width="120dp"
                       android:layout_height="50dp"
                       android:text="@string/current"
                       android:textColor="@color/black"
                       android:textSize="14sp" />

                   <RadioButton
                       android:id="@+id/forecast_radiobutton"
                       android:layout_width="120dp"
                       android:layout_height="50dp"
                       android:text="@string/forecast"
                       android:textColor="@color/black"
                       android:textSize="14sp" />

                   <RadioButton
                       android:id="@+id/search_radiobutton"
                       android:layout_width="120dp"
                       android:layout_height="50dp"
                       android:layout_marginBottom="4dp"
                       android:text="@string/nearby_places"
                       android:textColor="@color/black"
                       android:textSize="13sp" />
               </RadioGroup>

               <TextView
                   android:id="@+id/days_textView"
                   android:layout_width="50dp"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="4dp"
                   android:text="@string/days"
                   android:textColor="@color/black"
                   android:textSize="15sp"
                   app:layout_constraintBottom_toBottomOf="@+id/days_editText"
                   app:layout_constraintEnd_toStartOf="@+id/days_editText"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintVertical_bias="0.855" />

               <EditText
                   android:id="@+id/days_editText"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="32dp"
                   android:gravity="center"
                   android:hint="@string/hint_sample"
                   android:importantForAutofill="no"
                   android:inputType="number"
                   android:textColor="@color/black"
                   android:textSize="15sp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintVertical_bias="0.504" />
           </androidx.constraintlayout.widget.ConstraintLayout>

       </androidx.cardview.widget.CardView>

       <LinearLayout
           android:id="@+id/search_linearLayout"
           android:layout_width="340dp"
           android:layout_height="55dp"
           android:layout_marginTop="45dp"
           android:layout_marginBottom="35dp"
           android:background="@drawable/ic_search_background"
           android:orientation="horizontal"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/radiobutton_cardView"
           app:layout_constraintVertical_bias="0.0">
           <EditText
               android:id="@+id/search_editText"
               android:layout_width="265dp"
               android:layout_height="match_parent"
               android:layout_gravity="center"
               android:layout_marginStart="15dp"
               android:layout_marginTop="5dp"
               android:layout_marginEnd="5dp"
               android:layout_marginBottom="5dp"
               android:padding="5dp"
               android:background="@null"
               android:hint="@string/search_location_example"
               android:importantForAutofill="no"
               android:inputType="text"
               android:textSize="14sp" />

           <ImageView
               android:id="@+id/search_imageview"
               android:layout_width="30dp"
               android:layout_height="30dp"
               android:layout_gravity="center"
               android:layout_margin="10dp"
               android:clickable="true"
               android:focusable="true"
               android:src="@drawable/ic_baseline_search_24"
               tools:ignore="ContentDescription" />

       </LinearLayout>
   </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>